// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Header renders correctly  1`] = `
<Header__StyledHeader>
  <Grid__Grid
    align="center"
    fillHeight={true}
  >
    <Column__Column
      cols={2}
    >
      <Header__Logo
        to="/"
      >
        <img
          alt="Dahl"
          src="logo.svg"
        />
      </Header__Logo>
    </Column__Column>
    <Column__Column>
      <Breadcrumb
        title="Questionnaire"
      />
    </Column__Column>
    <Column__Column>
      <Header__UtilityBtns
        horizontal={true}
      >
        <IconButton
          disabled={true}
          icon="icon-preview.svg"
          title="Preview"
        />
        <IconButton
          disabled={true}
          icon="icon-export.svg"
          title="Export"
        />
      </Header__UtilityBtns>
    </Column__Column>
  </Grid__Grid>
</Header__StyledHeader>
`;

exports[`components/Header should conditionally render Breadcrumb 1`] = `
<Header__StyledHeader>
  <Grid__Grid
    align="center"
    fillHeight={true}
  >
    <Column__Column
      cols={2}
    >
      <Header__Logo
        to="/"
      >
        <img
          alt="Dahl"
          src="logo.svg"
        />
      </Header__Logo>
    </Column__Column>
    <Column__Column />
    <Column__Column />
  </Grid__Grid>
</Header__StyledHeader>
`;

exports[`components/Header should conditionally render UtilityBtns 1`] = `
<Header__StyledHeader>
  <Grid__Grid
    align="center"
    fillHeight={true}
  >
    <Column__Column
      cols={2}
    >
      <Header__Logo
        to="/"
      >
        <img
          alt="Dahl"
          src="logo.svg"
        />
      </Header__Logo>
    </Column__Column>
    <Column__Column />
    <Column__Column />
  </Grid__Grid>
</Header__StyledHeader>
`;
